--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,22 +3,6 @@ spring:
     active: local
 
 ---
-#spring:
-#  config:
-#    activate:
-#      on-profile: local
-#  datasource:
-#    hikari:
-#      jdbc-url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#      username: sa
-#      password:
-#      driver-class-name: org.h2.Driver
-#  batch:
-#    jdbc:
-#      initialize-schema: embedded
-#      table-prefix: BATCH_
-
----
 spring:
   config:
     activate:
@@ -34,7 +18,7 @@ spring:
     job:
       name: ${job.name:NONE}
     jdbc:
-      initialize-schema: always
+      initialize-schema: never
 mybatis:
   type-aliases-package: com.ezwel.esp.batch.common.domain
   mapper-locations: classpath:mappers/**/**/**.xml
